--- a/app/views/rest_web_clients/showUser.html.erb
+++ b/app/views/rest_web_clients/showUser.html.erb
@@ -1,5 +1,5 @@
 <%= @output %>
-
+<%= @output2 %>
 <br>
 <h1><%= link_to 'Aktualisieren',            controller: "rest_web_clients", action: "showUser"  %>
  <br><br>
