--- a/app/views/rest_web_clients/showUser.html.erb
+++ b/app/views/rest_web_clients/showUser.html.erb
@@ -1,5 +1,14 @@
-<%= @output %>
-<%= @output2 %>
+
+<table border="1">
+<%= @output.each do |nameUser| %>
+
+      <tr>
+            <td><%= nameUser %></td>
+      </tr>
+
+  <% end %>
+</table>
+
 <br>
 <h1><%= link_to 'Aktualisieren',            controller: "rest_web_clients", action: "showUser"  %>
  <br><br>
