--- a/app/views/rest_web_clients/receive.html.erb
+++ b/app/views/rest_web_clients/receive.html.erb
@@ -1,5 +1,5 @@
 <h1>Nachricht-Ausgabe </h1>
-<h2>Empfänger: </h2><%= recipient %>
+<h2>Empfänger: </h2><%= @recipient %>
 <h2>Nachricht :</h2><%= @cipher %>
 <h2>IV: </h2><%= @iv %>
 <h2>KEY: </h2><%= @key_recipient_enc %>
