--- a/app/views/rest_web_clients/sendMessage.html.erb
+++ b/app/views/rest_web_clients/sendMessage.html.erb
@@ -27,10 +27,8 @@
     </div>
 
     <div class="field">
-      <%= f.label :receiver %><br>
-      <%= f.text_field :receiver %>
+     Receiver-Box
     </div>
-    <%= f.collection_select  %>
     <div class="actions">
       <%= f.submit %>
     </div>
