--- a/app/views/rest_web_clients/new.html.erb
+++ b/app/views/rest_web_clients/new.html.erb
@@ -1,4 +1,3 @@
-<h1>New rest_web_client</h1>
 
 <%= form_for @rest_web_client, url: {action: "create"} do |f| %>
     <% if @rest_web_client.errors.any? %>
@@ -28,3 +27,11 @@
 
 
 <%= link_to 'Back', rest_web_clients_path %>
+
+			
+
+			</div><!-- //main content -->
+		</div><!-- //row -->
+	</div> <!-- //container -->
+</body>
+</html>
