--- a/app/views/rest_web_clients/index.html.erb
+++ b/app/views/rest_web_clients/index.html.erb
@@ -1,25 +1,72 @@
-<center><table border="1">
-  <thead>
-  <tr>
-    <th>Funktions-Aufrufe</th>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Bootstrap In Practice - Landing Page Example</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<!-- Bootstrap -->
+	<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
+	<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet" />
+
+	<link href="http://fonts.googleapis.com/css?family=Abel|Open+Sans:400,600" rel="stylesheet" />
+
+	<style>
+
+		html {
+			background: url(img/6133364748_89f2365922_o.jpg) no-repeat center center fixed; 
+			-webkit-background-size: cover;
+			-moz-background-size: cover;
+			-o-background-size: cover;
+			background-size: cover;
+		}
+
+		body {
+			padding-top: 20px;
+			font-size: 16px;
+			font-family: "Open Sans",serif;
+			background: transparent;
+		}
+
+		h1 {
+			font-family: "Abel", Arial, sans-serif;
+			font-weight: 400;
+			font-size: 40px;
+		}
+
+		/* Override B3 .panel adding a subtly transparent background */
+		.panel {
+			background-color: rgba(255, 255, 255, 0.9);
+		}
+
+		.margin-base-vertical {
+			margin: 40px 0;
+		}
+
+	</style>
+
+</head>
+<body>
+
+	<div class="container">
+		<div class="row">
+			<div class="col-md-6 col-md-offset-3 panel panel-default">
+
+	<form action="/mailing-list" method="post">
+		<p>
+			<div class="btn btn-lg"><%= link_to 'User anzeigen',            controller: "rest_web_clients", action: "showUser"  %>
+		</p><p>
+<div class="btn btn-lg"><%= link_to "User registrieren",        controller: "rest_web_clients", action: "new"       %>
+		</p><p>
+<div class="btn btn-lg"><%= link_to 'User einloggen',           controller: "rest_web_clients", action: "login"     %>
+	
+	</form>
+
+			
+
+			</div><!-- //main content -->
+		</div><!-- //row -->
+	</div> <!-- //container -->
+
+</body>
+</html>
 
 
-  </tr>
-  </thead>
-  <tbody>
-
-  <tr>
-    <td><%= link_to 'User anzeigen',            controller: "rest_web_clients", action: "showUser"  %></td>
-   </tr>
-  <tr>
-    <td><%= link_to "User registrieren",        controller: "rest_web_clients", action: "new"       %></td>
-    </tr>
-  <tr>
-    <td><%= link_to 'User einloggen',           controller: "rest_web_clients", action: "login"     %></td>
-  </tr>
-
-  </tbody>
-</table>
-
-<br>
-</center>
