--- a/app/views/rest_web_clients/new.html.erb
+++ b/app/views/rest_web_clients/new.html.erb
@@ -23,9 +23,8 @@
       <%= f.label :password %><br>
       <%= f.text_field :password %>
     </div>
-    <button type="submit" class="btn btn-success btn-lg">
-      <%= f.submit %>
-    </button>
+	<br>
+    <%= f.submit :class => "btn btn-success btn-lg" %>
 <% end %>
 
 
