--- a/app/views/rest_web_clients/afterlogin.html.erb
+++ b/app/views/rest_web_clients/afterlogin.html.erb
@@ -1,4 +1,22 @@
+<% if flash[:alert] %>
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title" id="todo-label">Meldung</h4>
+      </div>
+      <div class="modal-body"> 
+	<% flash.each do |name, msg| -%>
+      		<%= content_tag :div, msg, class: name %>
+		<br>
+    	<% end -%>
 
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" data-dismiss="modal">OK</button>
+      </div>
+    </div>
+   </div>
+<% end %>
 <table class="table table-striped">
   <tr>
     <td>Nachricht verschicken</td>
@@ -62,3 +80,6 @@
       </td>
   </tr>
 </table>
+<div class="modal fade" id="alert" tabindex="-1" role="dialog" aria-labelledby="todo-label" aria-hidden="true">
+  
+</div>
