--- a/app/views/rest_web_clients/login.html.erb
+++ b/app/views/rest_web_clients/login.html.erb
@@ -24,7 +24,7 @@
       <%= f.text_field :password %>
     </div>
 	<br>
-    <%= f.submit :class => "btn btn-success btn-lg" %>
+    <%= f.submit 'Login', :class => "btn btn-success btn-lg" %>
 <% end %>
 
 <%= @privkey_user %>
