--- a/app/views/rest_web_clients/sendMessage.html.erb
+++ b/app/views/rest_web_clients/sendMessage.html.erb
@@ -30,7 +30,7 @@
      Receiver-Box
     </div>
 	<br>
-    <%= f.submit :class => "btn btn-success btn-lg" %>
+    <%= f.submit 'Nachricht senden',  :class => "btn btn-success btn-lg" %>
 
 
 <% end %>
