--- a/app/views/rest_web_clients/new.html.erb
+++ b/app/views/rest_web_clients/new.html.erb
@@ -24,7 +24,7 @@
       <%= f.text_field :password %>
     </div>
 	<br>
-    <%= f.submit :class => "btn btn-success btn-lg" %>
+    <%= f.submit 'Registrieren', :class => "btn btn-success btn-lg" %>
 <% end %>
 
 
